--- a/src/index.css
+++ b/src/index.css
@@ -16,19 +16,16 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #c0985a;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #c0985a;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 h1 {
@@ -61,7 +58,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #c0985a;
   }
   button {
     background-color: #f9f9f9;
