--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+@font-face {
+  font-family: 'Royale', 'Helvetica Neue', sans-serif;
+  src: url('./assets/fonts/ROYALE-Semibold.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 :root {
   font-family: 'Poppins', 'Roboto', sans-serif;
   line-height: 1.5;
